
  * Sync with upstream commits:
    - Rebase against latest upstream git master.
    - Skip the test if io_pgetevents() is not implemented.
  * Switch to Standards-Version 4.5.0 (no changes needed).
  * Do not pass --add-udeb to dh_makeshlibs anymore, it's autodetected since
    debhelper 12.3, for which we add an explicit versioned Build-Depends.
  * Use correct syscall numbers for x32 port.

 -- Guillem Jover <guillem@debian.org>  Mon, 30 Mar 2020 04:50:14 +0200

libaio (0.3.112-5) unstable; urgency=medium

  * Sync with upstream commits:
    - Make test suite failures fatal, so we ignore errors for now, until it
      passes at least in all release architectures.
    - Add support for SKIPable tests.
    - Allow running tests against the installed library, which will make
      possible to add autopkgtests.
    - Fix test case 5.t, by using a write() instead of a read() to force the
      kernel to read from the unreadable buffer.
  * Add a workaround to io_pgetevents() for 32-bit userland running on
    64-bit kernels to cope with the broken compat kernel syscall, which uses
    a 64-bit pointer instead of a 32-bit one, and eats the sigset_t size
    member which makes it then fail a consistency check and return -EINVAL.
    This fixes test case 22.t. The kernel fix is being prepared as well.
  * Add more detailed error messages to test case 22.t.

 -- Guillem Jover <guillem@debian.org>  Fri, 16 Aug 2019 05:11:10 +0200

libaio (0.3.112-4) unstable; urgency=medium

  * Switch to Standards-Version 4.4.0 (no changes needed).
  * Switch to debhelper compatibility level 12.
  * Switch from debian/compat to debhelper-commpat in Build-Depends.
  * Test suite fixes:
    - Fix the attempt_rw READ call to be arch-dependent instead of making
      it the WRITE call. Thanks to Jeff Moyer <jmoyer@redhat.com>.

 -- Guillem Jover <guillem@debian.org>  Fri, 02 Aug 2019 05:33:44 +0200

libaio (0.3.112-3) unstable; urgency=medium

  * Test suite fixes: